--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                 <ul class="product">
                     <li class="product__item">
                         <div class="product-links">
-                            <a href="#" class="product-links__link product-links__link-buy">Купить</a>
+                            <a href="#popup-cart" class="product-links__link product-links__link-buy showpopup">Купить</a>
                             <a href="#" class="product-links__link product-links__link-marker">В закладки</a>
                         </div>
                         <div class="product__img">
@@ -189,7 +189,7 @@
                     </li>
                     <li class="product__item new">
                         <div class="product-links">
-                            <a href="#" class="product-links__link product-links__link-buy">Купить</a>
+                            <a href="#popup-cart" class="product-links__link product-links__link-buy showpopup">Купить</a>
                             <a href="#" class="product-links__link product-links__link-marker">В закладки</a>
                         </div>
                         <div class="product__img">
@@ -201,7 +201,7 @@
                     </li>
                     <li class="product__item">
                         <div class="product-links">
-                            <a href="#" class="product-links__link product-links__link-buy">Купить</a>
+                            <a href="#popup-cart" class="product-links__link product-links__link-buy showpopup">Купить</a>
                             <a href="#" class="product-links__link product-links__link-marker">В закладки</a>
                         </div>
                         <div class="product__img">
@@ -213,7 +213,7 @@
                     </li>
                     <li class="product__item new">
                         <div class="product-links">
-                            <a href="#" class="product-links__link product-links__link-buy">Купить</a>
+                            <a href="#popup-cart" class="product-links__link product-links__link-buy showpopup">Купить</a>
                             <a href="#" class="product-links__link product-links__link-marker">В закладки</a>
                         </div>
                         <div class="product__img">
@@ -465,6 +465,23 @@
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6020195146568!2d30.32069076821187!3d59.93874581277697!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywgMTkxMTg2!5e0!3m2!1sru!2sru!4v1643564734080!5m2!1sru!2sru" width="945" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
     </section>
     <!--End popup map content-->
+
+    <!--Popup cart content-->
+    <section class="popup" id="popup-cart">
+        <h2 class="hidden">Действие над выбранным товаром</h2>
+        <div class="cart-information">
+            <p class="cart-information__icon succes">
+                <span class="hidden">succes</span>
+            </p><!--warning, errore-->
+            <h3 class="cart-information__info">Товар добавлен в корзину!</h3>
+        </div>
+        <div class="cart-operation">
+            <button class="btn-base">Оформить заказ</button>
+            <button class="btn-base cart-operation__btn">Продолжить покупки</button>        
+        </div>
+    </section>
+    <!--End popup cart content-->
+
 
     <script src="js/jquery.1.11.3.js"></script>       
     <script src="lib/slick/slick.min.1.8.1.js"></script>
