--- a/catalog.html
+++ b/catalog.html
@@ -63,7 +63,19 @@
                     </div>
                 </div><!--end info-block-->
 
+                <!--mobile content-->
+                <input type="checkbox" id="menu-mobile" class="menu-checker">
+                <label for="menu-mobile" class="btn-menu-creation" >
+                    <span class="first"></span>
+                    <span class="second"></span>
+                    <span class="third"></span>
+                </label>
+                <div class="full-background"></div>
+             
                 <nav class="main-nagivation">
+                    <form method="post" action="url" class="search-form menu-search-form">
+                        <input type="text" placeholder="Поиск:" class="search-form__input">
+                    </form>
                     <ul class="main-nav">
                         <li class="main-nav__item">
                             <a href="index.html" class="main-nav__link">Главная</a>
@@ -85,6 +97,23 @@
                         </li>
                         <li class="main-nav__item">
                             <a href="#" class="main-nav__link">Контакты</a>
+                        </li>
+                    </ul>
+                    <ul class="social-links social-links_output menu-social-links">
+                        <li class="social-links__item">
+                            <a href="#" class="social-links__link _link-vk">
+                                <span class="hidden">Вконтакте</span>
+                            </a>
+                        </li>
+                        <li class="social-links__item">
+                            <a href="#" class="social-links__link _link-fb">
+                                <span class="hidden">Фейсбук</span>
+                            </a>
+                        </li>
+                        <li class="social-links__item">
+                            <a href="#" class="social-links__link _link-insta">
+                                <span class="hidden">Инстаграм</span>
+                            </a>
                         </li>
                     </ul>
                 </nav><!--end main-nav-->
@@ -467,7 +496,7 @@
     <script src="js/js.js"></script>   
     <script src="js/jquery.pixlayout.0.9.8.js"></script>
     <script>
-        $(function(){
+       /* $(function(){
             $.pixlayout({
                 src: "img/source/catalog.png",
                 opacity: 0.8,
@@ -476,7 +505,7 @@
                 clip: true,
                 show: false,
             });
-        });
+        });*/
     </script>
 </body>
 </html>
